# terraform-aws-cw-cost-widget

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  main.tf  outputs.tf  variables.tf
.github/workflows/: ci.yml  release.yml
cost_widget/: pyproject.toml
cost_widget/src/cost_widget/: main.py
cost_widget/tests/: conftest.py
cost_widget/tests/unit/: test_cost_widget.py
examples/complete/: dashboard.tftpl  main.tf  versions.tf
test/: Makefile  cw-cost-widget_test.go
