[project]
name = "cost-widget"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Carl Cliver", email = "ccliver@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "aws-lambda-powertools>=3.24.0",
    "boto3>=1.42.36",
]

[project.scripts]
cost-widget = "cost_widget:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "moto>=5.1.20",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]
